apps/docs/versioned_docs/version-1.0.2/layouts/auto-grid.mdx
---
sidebar_position: 7
title: AutoGrid
description: A self-calculating grid layout that automatically adapts column count based on available space and minimum item width.
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import AutoGrid from '@site/src/components/UI/auto-grid';

## Overview

The **AutoGrid** component automatically determines the number of columns based on the available container width and a defined minimum item width.  
It’s ideal for dynamic content, responsive galleries, and layouts where the number of items is unknown.

## Preview

<Tabs defaultValue="preview">
  <TabItem value="preview" label="Preview" default>
    <div className="p-4 border rounded-lg">
      <AutoGrid minItemWidth="150px" maxColumns={4} gap="normal" balanced>
        <div className="bg-red-600 text-white p-4 rounded">Item 1</div>
        <div className="bg-red-600 text-white p-4 rounded">Item 2</div>
        <div className="bg-red-600 text-white p-4 rounded">Item 3</div>
        <div className="bg-red-600 text-white p-4 rounded">Item 4</div>
        <div className="bg-red-600 text-white p-4 rounded">Item 5</div>
        <div className="bg-red-600 text-white p-4 rounded">Item 6</div>
      </AutoGrid>
    </div>
  </TabItem>
  <TabItem value="code" label="Code">
    ```tsx
    import AutoGrid from './components/ui';

    function Example() {
      return (
        <AutoGrid minItemWidth="150px" maxColumns={4} gap="normal" balanced>
          <div>Item 1</div>
          <div>Item 2</div>
          <div>Item 3</div>
          <div>Item 4</div>
        </AutoGrid>
      );
    }
    ```
  </TabItem>
</Tabs>

## Installation

<Tabs>
  <TabItem value="npm" label="npm" default>
    ```bash
    npx @mindfiredigital/ignix-ui add auto-grid
    ```
  </TabItem>
  <TabItem value="yarn" label="Yarn">
    ```bash
    yarn @mindfiredigital/ignix-ui add auto-grid
    ```
  </TabItem>
  <TabItem value="pnpm" label="pnpm">
    ```bash
    pnpm @mindfiredigital/ignix-ui add auto-grid
    ```
  </TabItem>
</Tabs>

## Variants

import AutoGridDemo from '@site/src/components/Demo/AutoGridDemo';

<AutoGridDemo />

## Usage

### Responsive Gallery

```tsx
function Gallery() {
  return (
    <AutoGrid minItemWidth="200px" maxColumns={6} gap="small" balanced>
      {images.map((src, i) => (
        <img key={i} src={src} className="rounded shadow" />
      ))}
    </AutoGrid>
  );
}
```

### Tags or Categories

```tsx
function TagList({ tags }) {
  return (
    <AutoGrid minItemWidth="120px" gap="comfortable">
      {tags.map((tag, i) => (
        <span key={i} className="px-3 py-1 rounded bg-gray-200">
          {tag}
        </span>
      ))}
    </AutoGrid>
  );
}
```

## Props

| Prop           | Type                                           | Default   | Description                                                              |
|----------------|-----------------------------------------------|-----------|--------------------------------------------------------------------------|
| `minItemWidth` | `string`                                      | `"200px"` | Minimum width of each grid item before wrapping.                         |
| `maxColumns`   | `number`                                      | `Infinity`| Maximum number of columns allowed.                                       |
| `gap`          | `"small" \| "normal" \| "large" \| string`    | `"normal"`| Gap between grid items.                                                  |
| `balanced`     | `boolean`                                     | `false`   | Ensures balanced column heights (ideal for masonry-like layouts).        |
